--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    //compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+    //compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 }
 
 test {
