--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,33 @@ dependencies {
     //compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
     //compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
+    // https://mvnrepository.com/artifact/org.apache.mahout/mahout-mr
+    compile group: 'org.apache.mahout', name: 'mahout-mr', version: '0.13.0'
+    // https://mvnrepository.com/artifact/org.apache.mahout/mahout-math
+    compile group: 'org.apache.mahout', name: 'mahout-math', version: '0.13.0'
+    // https://mvnrepository.com/artifact/org.apache.mahout/mahout-integration
+    compile group: 'org.apache.mahout', name: 'mahout-integration', version: '0.13.0'
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+
+
+
 }
 
 test {
     useJUnitPlatform()
 }
+
+configurations.all {
+
+    exclude module: 'slf4j-log4j12'
+
+    exclude module: 'jms'
+
+    exclude module: 'jmxtools'
+
+    exclude module: 'jmxri'
+
+}
+
