--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://csl-2019-db.cphkcpsmvvem.ap-northeast-2.rds.amazonaws.com:3306/csl_db?serverTimezone=UTC
+    url: jdbc:mysql://cslmysql.ccaygbumrmq7.ap-northeast-2.rds.amazonaws.com:3306/csldb?serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: csl_user
+    username: csluser
     password: csl2016!
 
   jpa:
