--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     compile group: 'org.apache.mahout', name: 'mahout-integration', version: '0.13.0'
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
-
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
 
 }
@@ -44,14 +46,9 @@ test {
 }
 
 configurations.all {
-
     exclude module: 'slf4j-log4j12'
-
     exclude module: 'jms'
-
     exclude module: 'jmxtools'
-
     exclude module: 'jmxri'
-
 }
 
